Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14263

Test KVM and Test KVM AHK: random "Fatal System Error: 0x00000139", after new Cc lazy writer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 0.4.8
    • NTCore

    Description

      https://build.reactos.org/builders/Test%20KVM?numbuilds=200

      {{Jan 26 09:57 5cc0668b213b... failure #19287}}
      {{Jan 26 23:39 50afbd48d4c1... failure #19296}}

      ...
      err:(base/system/winlogon/sas.c:938) Shutting down NT...
      ...
      WARNING:  HvHiveWillShrink at sdk/lib/cmlib/hivewrt.c:280 is UNIMPLEMENTED!
       
      *** Fatal System Error: 0x00000139
                             (0x00000003,0xF7610770,0xF7610718,0x00000000)
       
       
      Entered debugger on embedded INT3 at 0x0008:0x8094b284.
      kdb:>
       bt
      Eip:
      <NTOSKRNL.EXE:14b285 (:0 (RtlpBreakWithStatusInstruction))>
      Frames:
      <NTOSKRNL.EXE:8710d (ntoskrnl/ke/bug.c:1100 (KeBugCheckWithTf))>
      <NTOSKRNL.EXE:12f3dc (ntoskrnl/ke/i386/traphdlr.c:1586 (KiRaiseSecurityCheckFailureHandler))>
      <NTOSKRNL.EXE:396d (:0 (KiRaiseSecurityCheckFailure))>
      <NTOSKRNL.EXE:6e80 (sdk/include/crt/mingw32/intrin_x86.h:1609 (CcRosFlushVacb))>
      <NTOSKRNL.EXE:aeac (ntoskrnl/cc/view.c:1097 (CcFlushCache))>
      <fastfat.sys:dbce>
      ...

      {{Jan 27 00:50 1e903d96cbdc... failure #19298}}

      ...
      (base/setup/usetup/filesup.c:259) NtOpenFile failed: c0000034, \Device\CdRom0\reactos\system32\kdvbox.dll
       
      *** Fatal System Error: 0x00000139
                             (0x00000003,0xF78237B4,0xF782375C,0x00000000)
       
       
      Entered debugger on embedded INT3 at 0x0008:0x8094b214.
      kdb:>
       bt
      Eip:
      <NTOSKRNL.EXE:14b215 (:0 (RtlpBreakWithStatusInstruction))>
      Frames:
      <NTOSKRNL.EXE:8709d (ntoskrnl/ke/bug.c:1100 (KeBugCheckWithTf))>
      <NTOSKRNL.EXE:12f36c (ntoskrnl/ke/i386/traphdlr.c:1586 (KiRaiseSecurityCheckFailureHandler))>
      <NTOSKRNL.EXE:396d (:0 (KiRaiseSecurityCheckFailure))>
      <NTOSKRNL.EXE:7c25 (sdk/include/crt/mingw32/intrin_x86.h:1609 (CcRosReleaseVacb))>
      <NTOSKRNL.EXE:643d (ntoskrnl/cc/pin.c:287 (CcUnpinDataForThread))>
      <NTOSKRNL.EXE:64b4 (ntoskrnl/cc/pin.c:263 (CcUnpinData))>
      <fastfat.sys:895f>
      ...

      Attachments

        Issue Links

          Activity

            People

              Heis Spiter Pierre Schweitzer
              Serge Gautherie Serge Gautherie
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: